H8 anpassungen